// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InformationTile /> - snapshots renders InformationTile 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div>
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InformationTile /> - snapshots renders InformationTile with assertive mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodAssertive"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div>
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InformationTile /> - snapshots renders InformationTile with cautionary mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodCautionary"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div>
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InformationTile /> - snapshots renders InformationTile with children 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      >
        <div>
          Child content
        </div>
      </div>
      <div
        class="footer"
      >
        <div>
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InformationTile /> - snapshots renders InformationTile with information data 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront"
    >
      <div
        class="informationBtn"
      >
        <span
          aria-live="polite"
          class="container"
        >
          <button
            aria-label="Information"
            class="button default iconButton"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="iconWrapper"
              >
                <svg
                  aria-hidden="true"
                  class="icon"
                  focusable="false"
                  role="presentation"
                >
                  <use
                    xlink:href="#undefined"
                  />
                </svg>
              </span>
            </span>
          </button>
        </span>
      </div>
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      >
        <div>
          Child content
        </div>
      </div>
      <div
        class="footer"
      >
        <div>
          Hello world
        </div>
      </div>
    </div>
    <div
      class="face faceBack"
    >
      <div
        class="informationBtn"
      >
        <span
          aria-live="polite"
          class="container"
        >
          <button
            aria-disabled="true"
            aria-label="Information"
            class="button default iconButton"
            disabled=""
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="iconWrapper"
              >
                <svg
                  aria-hidden="true"
                  class="icon"
                  focusable="false"
                  role="presentation"
                >
                  <use
                    xlink:href="#undefined"
                  />
                </svg>
              </span>
            </span>
          </button>
        </span>
      </div>
      <div
        class="information"
      >
        <p
          class="paragraph body dark"
        >
          Additional information can be included on the underside of the tile and viewed on click of the information icon.
        </p>
        <div
          class="footer"
        >
          <div
            class="actions"
          >
            <span
              aria-live="polite"
              class="container"
            >
              <button
                aria-disabled="true"
                class="button secondary"
                disabled=""
                type="button"
              >
                <span
                  class="content"
                >
                  <span
                    class="label"
                  >
                    Learn more
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InformationTile /> - snapshots renders InformationTile with informative mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodInformative"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div>
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InformationTile /> - snapshots renders InformationTile with negative mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodNegative"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div>
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InformationTile /> - snapshots renders InformationTile with positive mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodPositive"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div>
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InformationTile /> - snapshots renders InformationTile with prominent mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodProminent"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div>
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiActionTile /> renders MultiActionTile 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div
          class="actions"
        >
          <span
            aria-live="polite"
            class="container"
          >
            <a
              class="button default"
              href="href"
              target="_self"
            >
              <span
                class="content"
              >
                <span
                  class="label"
                >
                  View
                </span>
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiActionTile /> renders MultiActionTile with assertive mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodAssertive"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div
          class="actions"
        >
          <div
            class="p-0 mr-0-point-5"
          >
            <span
              aria-live="polite"
              class="container"
            >
              <a
                class="button secondary"
                href="href2"
                target="_self"
              >
                <span
                  class="content"
                >
                  <span
                    class="label"
                  >
                    Preview
                  </span>
                </span>
              </a>
            </span>
          </div>
          <span
            aria-live="polite"
            class="container"
          >
            <a
              class="button default"
              href="href"
              target="_self"
            >
              <span
                class="content"
              >
                <span
                  class="label"
                >
                  View
                </span>
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiActionTile /> renders MultiActionTile with cautionary mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodCautionary"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div
          class="actions"
        >
          <div
            class="p-0 mr-0-point-5"
          >
            <span
              aria-live="polite"
              class="container"
            >
              <a
                class="button secondary"
                href="href2"
                target="_self"
              >
                <span
                  class="content"
                >
                  <span
                    class="label"
                  >
                    Preview
                  </span>
                </span>
              </a>
            </span>
          </div>
          <span
            aria-live="polite"
            class="container"
          >
            <a
              class="button default"
              href="href"
              target="_self"
            >
              <span
                class="content"
              >
                <span
                  class="label"
                >
                  View
                </span>
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiActionTile /> renders MultiActionTile with informative mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodInformative"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div
          class="actions"
        >
          <div
            class="p-0 mr-0-point-5"
          >
            <span
              aria-live="polite"
              class="container"
            >
              <a
                class="button secondary"
                href="href2"
                target="_self"
              >
                <span
                  class="content"
                >
                  <span
                    class="label"
                  >
                    Preview
                  </span>
                </span>
              </a>
            </span>
          </div>
          <span
            aria-live="polite"
            class="container"
          >
            <a
              class="button default"
              href="href"
              target="_self"
            >
              <span
                class="content"
              >
                <span
                  class="label"
                >
                  View
                </span>
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiActionTile /> renders MultiActionTile with negative mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodNegative"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div
          class="actions"
        >
          <div
            class="p-0 mr-0-point-5"
          >
            <span
              aria-live="polite"
              class="container"
            >
              <a
                class="button secondary"
                href="href2"
                target="_self"
              >
                <span
                  class="content"
                >
                  <span
                    class="label"
                  >
                    Preview
                  </span>
                </span>
              </a>
            </span>
          </div>
          <span
            aria-live="polite"
            class="container"
          >
            <a
              class="button default"
              href="href"
              target="_self"
            >
              <span
                class="content"
              >
                <span
                  class="label"
                >
                  View
                </span>
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiActionTile /> renders MultiActionTile with positive mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodPositive"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div
          class="actions"
        >
          <div
            class="p-0 mr-0-point-5"
          >
            <span
              aria-live="polite"
              class="container"
            >
              <a
                class="button secondary"
                href="href2"
                target="_self"
              >
                <span
                  class="content"
                >
                  <span
                    class="label"
                  >
                    Preview
                  </span>
                </span>
              </a>
            </span>
          </div>
          <span
            aria-live="polite"
            class="container"
          >
            <a
              class="button default"
              href="href"
              target="_self"
            >
              <span
                class="content"
              >
                <span
                  class="label"
                >
                  View
                </span>
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiActionTile /> renders MultiActionTile with prominent mood 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront faceMoodProminent"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div
          class="actions"
        >
          <div
            class="p-0 mr-0-point-5"
          >
            <span
              aria-live="polite"
              class="container"
            >
              <a
                class="button secondary"
                href="href2"
                target="_self"
              >
                <span
                  class="content"
                >
                  <span
                    class="label"
                  >
                    Preview
                  </span>
                </span>
              </a>
            </span>
          </div>
          <span
            aria-live="polite"
            class="container"
          >
            <a
              class="button default"
              href="href"
              target="_self"
            >
              <span
                class="content"
              >
                <span
                  class="label"
                >
                  View
                </span>
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiActionTile /> renders MultiActionTile with secondary action 1`] = `
<div
  class="root"
>
  <div
    class="tile"
  >
    <div
      class="face faceFront"
    >
      <div
        class="title"
      >
        <h3
          class="heading heading-3 dark small"
        >
          Title
        </h3>
        <div
          class="pt-0-point-25 m-0"
        >
          <p
            class="paragraph small dark-reduced-opacity"
          >
            Metadata
          </p>
        </div>
      </div>
      <div
        class="children"
      />
      <div
        class="footer"
      >
        <div
          class="actions"
        >
          <div
            class="p-0 mr-0-point-5"
          >
            <span
              aria-live="polite"
              class="container"
            >
              <a
                class="button secondary"
                href="href2"
                target="_self"
              >
                <span
                  class="content"
                >
                  <span
                    class="label"
                  >
                    Preview
                  </span>
                </span>
              </a>
            </span>
          </div>
          <span
            aria-live="polite"
            class="container"
          >
            <a
              class="button default"
              href="href"
              target="_self"
            >
              <span
                class="content"
              >
                <span
                  class="label"
                >
                  View
                </span>
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
